--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   </head>
 
   <body style="background-color: lightpink; font-family: fantasy">
-    lipsticks
+    <h3>lipsticks</h3>
+    <p>Lipstick apply color, texture, and protection to the lips.</p>
   </body>
 </html>
