--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
   <body style="background-color: lightpink; font-family: fantasy">
     <h3>lipsticks</h3>
     <p>Lipstick apply color, texture, and protection to the lips.</p>
+    <img src="0829_12.jpg" />
   </body>
 </html>
