another pic added

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     <h3>lipsticks</h3>
     <p>Lipstick apply color, texture, and protection to the lips.</p>
     <img src="0829_12.jpg" />
+    <img src="0829_1.jpg" />
   </body>
 </html>
